syntax = "proto3";

option csharp_namespace = "CarsService.Api";

package cars;

service CarsService {
    rpc GetCars(GetCarsRequest) returns (GetCarsResponse);
}

enum CarType {
    SEDAN = 0;
    SUV = 1;
    MINIVAN = 2;
    ROADSTER = 3;
}

message Car {
    string id = 1;
    string brand = 2;
    string model = 3;
    string registration_number = 4;
    int32 power = 5;
    int32 price = 6;
    CarType type = 7;
    bool availability = 8;
}

message GetCarsRequest {
    int32 page = 1;
    int32 size = 2;
    bool showAll = 3;
}

message GetCarsResponse {
    int32 total_amount = 1;
    int32 page = 2;
    int32 size = 3;
    repeated Car cars = 4;
}